<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8c00"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:background="@android:color/background_light"
        android:gravity="bottom|end"
        android:maxLength="17"
        android:maxLines="2"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="70sp"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:text="@string/_7"
        android:layout_below="@id/textView"
        android:layout_alignLeft="@id/textView"
        android:layout_alignStart="@id/textView"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"/>
    <Button
        android:id="@+id/button8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:text="@string/_8"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"
        android:layout_below="@id/textView"
        android:layout_toRightOf="@id/button7"
        android:layout_toEndOf="@id/button7"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:layout_below="@id/textView"
        android:layout_toRightOf="@id/button8"
        android:layout_toEndOf="@id/button8"
        android:id="@+id/button9"
        android:text="@string/_9"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:layout_below="@id/button7"
        android:id="@+id/button4"
        android:text="@string/_4"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:layout_below="@id/button8"
        android:layout_toRightOf="@id/button4"
        android:layout_toEndOf="@id/button4"
        android:id="@+id/button5"
        android:text="@string/_5"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:layout_below="@id/button9"
        android:layout_toRightOf="@id/button5"
        android:layout_toEndOf="@id/button5"
        android:id="@+id/button6"
        android:text="@string/_6"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:layout_below="@id/button4"
        android:id="@+id/button1"
        android:text="@string/_1"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:layout_below="@id/button5"
        android:layout_toRightOf="@id/button1"
        android:layout_toEndOf="@id/button1"
        android:id="@+id/button2"
        android:text="@string/_2"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:layout_below="@id/button6"
        android:layout_toRightOf="@id/button2"
        android:layout_toEndOf="@id/button2"
        android:id="@+id/button3"
        android:text="@string/_3"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:layout_below="@id/button1"
        android:id="@+id/buttonPoint"
        android:text="@string/o"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:layout_below="@id/button2"
        android:layout_toRightOf="@id/buttonPoint"
        android:layout_toEndOf="@id/buttonPoint"
        android:id="@+id/button0"
        android:text="@string/_0"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:maxWidth="90dp"
        android:layout_below="@id/button3"
        android:layout_toRightOf="@id/button0"
        android:layout_toEndOf="@id/button0"
        android:id="@+id/buttonEqual"
        android:text="@string/s"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:maxWidth="90dp"
        android:layout_below="@id/textView"
        android:layout_toRightOf="@id/button9"
        android:id="@+id/buttonClear"
        android:text="@string/c"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:maxWidth="90dp"
        android:layout_below="@id/buttonClear"
        android:layout_toRightOf="@id/button9"
        android:layout_toEndOf="@id/button9"
        android:id="@+id/buttonDiv"
        android:text="@string/d"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:maxWidth="90dp"
        android:layout_below="@id/buttonDiv"
        android:layout_toRightOf="@id/button6"
        android:layout_toEndOf="@id/button6"
        android:id="@+id/buttonMult"
        android:text="@string/x"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:maxWidth="90dp"
        android:layout_below="@id/buttonMult"
        android:layout_toRightOf="@id/button3"
        android:layout_toEndOf="@id/button3"
        android:id="@+id/buttonMinus"
        android:text="@string/m"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:maxWidth="90dp"
        android:layout_below="@id/buttonMinus"
        android:layout_toRightOf="@id/buttonEqual"
        android:layout_toEndOf="@id/buttonEqual"
        android:id="@+id/buttonPlus"
        android:text="@string/p"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#4d4d4d"/>
</RelativeLayout>